--- a/package.json
+++ b/package.json
@@ -1,24 +1,13 @@
 {
   "name": "svgvidgen",
   "version": "1.0.0",
-  "description": "SVG-based video frame generator",
-  "main": "index.ts",
+  "type": "module",
   "scripts": {
-    "start": "node index.js",
     "build": "tsc",
-    "dev": "nodemon index.ts",
-    "test": "jest"
-  },
-  "keywords": ["svg", "video", "generator", "nodejs", "typescript"],
-  "author": "zkaedi",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.18.2",
-    "@svgdotjs/svg.js": "^3.1.1"
+    "deploy": "wrangler deploy"
   },
   "devDependencies": {
     "typescript": "^5.3.2",
-    "nodemon": "^2.0.22",
-    "jest": "^29.7.0"
+    "wrangler": "^4.14.1"
   }
 }
