--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,3 +1,8 @@
-name = "worker-name"
-compatibility_date = "2025-05-04"
-main = "src/index.ts"
+// wrangler.toml
+name = "svgvidgen"
+type = "javascript"
+compatibility_date = "2024-05-05"
+compatibility_flags = ["nodejs_compat"]
+
+[build]
+command = "bun build src/index.ts --outdir dist --external:svgdom"
