--- a/wrangler.toml
+++ b/wrangler.toml
@@ -1,7 +1,3 @@
 name = "svgvidgen"
-type = "javascript"
-compatibility_date = "2024-05-05"
-compatibility_flags = ["nodejs_compat"]
-
-[build]
-command = "bun build src/index.ts --outdir dist --external:svgdom"
+main = "dist/index.js"
+compatibility_date = "2025-05-05"
